Link behaviour fix

--- a/application_form.html
+++ b/application_form.html
@@ -106,7 +106,7 @@
 				<img class="ic" src="Gallery_ic.png">
 			</div>
 		</div>
-		<a class="application-form__btn btn--yellow" href="choose_action.html" target="_blank">Опубликовать</a>
+		<a class="application-form__btn btn--yellow" >Опубликовать</a>
 	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="PickMeUp-master/dist/pickmeup.min.js"></script>
