--- a/choose_action.html
+++ b/choose_action.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 	<div class="mobile-container main__content">
-		<a class="main__btn btn--black" href="make_photo.html">Создать задание</a>
+		<a class="main__btn btn--black" href="make_photo.html" target="_blank">Создать задание</a>
 		<a class="main__btn btn--red">Срочно!</a>
-		<a class="main__btn btn--yellow" href="tinder.html">Прицениться</a>
+		<a class="main__btn btn--yellow" href="tinder.html" target="_blank">Прицениться</a>
 	</div>
 </body>
 </html>
