--- a/haltura.html
+++ b/haltura.html
@@ -74,7 +74,7 @@
 	            </div>
 	    	</div>
 		</div>
-	<a class="application-form__btn btn--yellow" href="tasks_for_you.html" target="_blank">Найти работу</a>
+	<a class="application-form__btn btn--yellow">Найти работу</a>
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
