--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<div class="mobile-container main__content">
 		<img class="main__logo" src="LOGO_Petrovich.png">
-		<a class="main__btn btn--red" href="problem.html">Я заказчик</a>
-		<a class="main__btn btn--yellow" href="tasks_for_you.html">Я мастер</a>
+		<a class="main__btn btn--red" href="problem.html" target="_blank">Я заказчик</a>
+		<a class="main__btn btn--yellow" href="tasks_for_you.html" target="_blank">Я мастер</a>
 	</div>
 </body>
 </html>
