--- a/make_photo.html
+++ b/make_photo.html
@@ -11,7 +11,7 @@
 	<div class="mobile-container main__content">
 		<div class="upper">
 			<img class="settings-ic" src="cog.png">
-			<a class="next-btn" href="application_form.html">Далее  ></a>
+			<a class="next-btn" href="application_form.html" target="_blank">Далее  ></a>
 		</div>
 		<div class="middle">
 			<h2 class="make-photo__title">Сделать фото проблемы</h2>
