--- a/master_task2.html
+++ b/master_task2.html
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 		<div class="master-tasks__btn">
-			<a class="application-form__btn btn--red" href="index.html" target="_blank">Берусь</a>
+			<a class="application-form__btn btn--red">Берусь</a>
 			<a class="application-form__btn btn--yellow" href="master_task.html">Посмотреть ещё</a>
 		</div>
 	</div>
