--- a/master_tasks_available.html
+++ b/master_tasks_available.html
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 		<div class="master-tasks__btn">
-			<a class="application-form__btn btn--yellow" href="master_task.html">Посмотреть задачи</a>
+			<a class="application-form__btn btn--yellow" href="master_task.html" target="_blank">Посмотреть задачи</a>
 		</div>
 	</div>
 </body>
