--- a/problem_zones.html
+++ b/problem_zones.html
@@ -11,7 +11,7 @@
 	<div class="mobile-container main__content">
 		<h2 style="font-weight: normal; margin: 0 25px 25px;">Отметьте проблемные зоны на фото</h2>
 		<div style="display: flex; flex-direction: column;">
-		<a href="problem_zones_example.html">
+		<a href="problem_zones_example.html" target="_blank">
 			<div class="problem-zones__container">
 				<img style="display: none;" title="Заменить стульчак" class="problem-zones__mark" id="mark1" src="Add_Detail.png">
 				<img style="display: none;" title="Починить дверцу шкафа" class="problem-zones__mark" id="mark2" src="Add_Detail.png">
