--- a/problem_zones_example.html
+++ b/problem_zones_example.html
@@ -16,7 +16,7 @@
 				<img title="Починить дверцу шкафа" class="problem-zones__mark" id="mark2" src="Add_Detail.png">
 			</div>
 			<img class="problem-zones__player" src="Player.png">
-			<a href="application_form.html">
+			<a href="application_form.html" target="_blank">
 				<img class="problem-zones__dictation" src="Dictation.png">
 			</a>
 		</div>
