--- a/solution.html
+++ b/solution.html
@@ -30,7 +30,7 @@
 		<a href="">
 			<span class="problem__zone zone--guests"></span>
 		</a>
-		<a href="master_tasks_available.html">
+		<a href="master_tasks_available.html" target="_blank">
 			<span class="problem__zone zone--wc"></span>
 		</a>
 		<a href="">
