--- a/tasks_for_you.html
+++ b/tasks_for_you.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="mobile-container main__content">
-		<a class="main__btn btn--yellow" href="haltura.html">Халтура</a>
-		<a class="main__btn btn--yellow" href="solution.html">Я умею</a>
+		<a class="main__btn btn--yellow" href="haltura.html" target="_blank">Халтура</a>
+		<a class="main__btn btn--yellow" href="solution.html" target="_blank">Я умею</a>
 	</div>
 </body>
 </html>
