--- a/tinder.html
+++ b/tinder.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="mobile-container content-indent tinder__window">
-		<h2 class="tinder__h2"><a href="index.html" target="_blank">Наименование унитаза</a></h2>
+		<h2 class="tinder__h2">Наименование унитаза</h2>
 		<div class="slideshow-container">
 			<div class="mySlides">
 				<img class="tinder__img" src="unitaz1.png">
