--- a/application_form.html
+++ b/application_form.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content main__content--application-form">
+	<div class="mobile-container content-indent main__content--application-form">
 		<div class="label">Мне нужно</div>
 		<input class="form__input" placeholder="Опишите Вашу задачу">
 		<div class="label">Когда</div>
