--- a/choose_action.html
+++ b/choose_action.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<a class="main__btn btn--black" href="make_photo.html" target="_blank">Создать задание</a>
 		<a class="main__btn btn--red">Срочно!</a>
 		<a class="main__btn btn--yellow" href="tinder.html" target="_blank">Прицениться</a>
