--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<img class="main__logo" src="LOGO_Petrovich.png">
 		<a class="main__btn btn--red" href="problem.html" target="_blank">Я заказчик</a>
 		<a class="main__btn btn--yellow" href="tasks_for_you.html" target="_blank">Я мастер</a>
