--- a/make_photo.html
+++ b/make_photo.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<div class="upper">
 			<img class="settings-ic" src="cog.png">
 			<a class="next-btn" href="application_form.html" target="_blank">Далее  ></a>
