--- a/problem.html
+++ b/problem.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class="mobile-container main__content">
+<div class="mobile-container content-indent">
 	<h2 class="problem__h2">Где проблема?</h2>
 	<div class="schema-interactive">
 		<img class="problem__img" src="House_schema.png">
