--- a/problem_zones.html
+++ b/problem_zones.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<h2 style="font-weight: normal; margin: 0 25px 25px;">Отметьте проблемные зоны на фото</h2>
 		<div style="display: flex; flex-direction: column;">
 		<a href="problem_zones_example.html" target="_blank">
