--- a/tasks_for_you.html
+++ b/tasks_for_you.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<a class="main__btn btn--yellow" href="haltura.html" target="_blank">Халтура</a>
 		<a class="main__btn btn--yellow" href="solution.html" target="_blank">Я умею</a>
 	</div>
