--- a/master_task.html
+++ b/master_task.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<h2 class="master-tasks__h2">Задание</h2>
 		<div class="white-block">
 			<h2 class="master-tasks__h3">Капитальный ремонт ванной комнаты</h2>
