--- a/master_tasks_available.html
+++ b/master_tasks_available.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div class="mobile-container main__content">
+	<div class="mobile-container content-indent">
 		<h2 class="master-tasks__h2">Ванная комната</h2>
 		<div class="i_can">
 			<h2 class="i_can__h3">Я умею:</h2>
